add NDK r14b and r15c download link

--- a/index.html
+++ b/index.html
@@ -1695,6 +1695,75 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <tr>
+                                <td rowspan="4">NDK r15c</td>
+                                <td>Windows 32-bit</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r15c-windows-x86.zip">android-ndk-r15c-windows-x86.zip</a>
+                                </td>
+                                <td>784778144</td>
+                                <td>f2e47121feb73ec34ced5e947cbf1adc6b56246e</td>
+                                <td rowspan="4"><a href="https://ws2.sinaimg.cn/large/006tNc79ly1fiujbk2g1uj31cr0epgos.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows 64-bit</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r15c-windows-x86_64.zip">android-ndk-r15c-windows-x86_64.zip</a>
+                                </td>
+                                <td>849733996</td>
+                                <td>970bb2496de0eada74674bb1b06d79165f725696</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r15c-darwin-x86_64.zip">android-ndk-r15c-darwin-x86_64.zip</a>
+                                </td>
+                                <td>960251267</td>
+                                <td>ea4b5d76475db84745aa8828000d009625fc1f98</td>
+                            </tr>
+                            <tr>
+                                <td>Linux 64-bit (x86)</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r15c-linux-x86_64.zip">android-ndk-r15c-linux-x86_64.zip</a>
+                                </td>
+                                <td>974976754</td>
+                                <td>0bf02d4e8b85fd770fd7b9b2cdec57f9441f27a2</td>
+                            </tr>
+                            <!-- NDK r14b -->
+                            <tr>
+                                <td rowspan="4">NDK r14b</td>
+                                <td>Windows 32-bit</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r14b-windows-x86.zip">android-ndk-r14b-windows-x86.zip</a>
+                                </td>
+                                <td>707533928</td>
+                                <td>070443eaa7fa37ed337f91c655e02ca708d37c92</td>
+                                <td rowspan="4"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fiuj6vxj5sj31aj0es76x.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows 64-bit</td>
+                                <td>
+                              <a href="https://dl.google.com/android/repository/android-ndk-r14b-windows-x86_64.zip">android-ndk-r14b-windows-x86_64.zip</a>
+                                </td>
+                                <td>769151176</td>
+                                <td>a625e8c599bccdb9061b61dcf3d1f1a01071613f</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td>
+                              <a href="https://dl.google.com/android/repository/android-ndk-r14b-darwin-x86_64.zip">android-ndk-r14b-darwin-x86_64.zip</a>
+                                </td>
+                                <td>824705073</td>
+                                <td>2bf582c43f6da16416e66203d158a6dfaba4277c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux 64-bit (x86)</td>
+                                <td>
+                              <a href="https://dl.google.com/android/repository/android-ndk-r14b-linux-x86_64.zip">android-ndk-r14b-linux-x86_64.zip</a>
+                                </td>
+                                <td>840626594</td>
+                                <td>becd161da6ed9a823e25be5c02955d9cbca1dbeb</td>
+                            </tr>
                             <!-- NDK r13b -->
                             <tr>
                                 <td rowspan="4">NDK r13b</td>
