--- a/gay_friends.html
+++ b/gay_friends.html
@@ -68,7 +68,7 @@
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#support-library">Support Library</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#sdk-samples">SDK Samples</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-framework-source-code">Android Framework Source Code</a></li>
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-l-preview-system-image">Android L Preview System Image</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-system-image">Android System Image</a></li>
                                     </ul>
                                 </li>
                                 <!--  Android Dev Tools	-->
