--- a/index.html
+++ b/index.html
@@ -200,70 +200,70 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tKfTcly1fi5syvw31dj31jk0go48a.jpg); width: 25%;" data-link="http://t.cn/R9ics5h" data-tag="QiNiu-PLSV-li" data-event-type="click">
+            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tKfTcly1fi5syvw31dj31jk0go48a.jpg); width: 25%;" data-link="http://t.cn/R9ics5h?utm_source=androiddevtools.cn&utm_medium=website" data-tag="QiNiu-PLSV-li" data-event-type="click">
                 <div class="inner">
                     <h1>七牛短视频 SDK 上线了</h1>
                     <p style="color: darkgray"></p>
                     <a class="btn" href="http://t.cn/R9ics5h" onclick="trackOutboundLink('http://t.cn/R9ics5h', 'QiNiu-PLSV', 'click');" title="">去用用</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw" data-tag="Android-Oreo-Weixin-li" data-event-type="click">
+            <li style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-Oreo-Weixin-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Oreo</h1>
                     <p style="color: darkgray">Android 8.0 现已推出</p>
                     <a class="btn" href="https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw" onclick="trackOutboundLink('https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw', 'Android-Oreo-Weixin', 'click');" title="">去学学</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tv4qwp4pj31jk0go0tb.jpg); width: 25%;" data-link="http://www.androidweekly.cn" data-tag="AndroidWeekly-li" data-event-type="click">
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tv4qwp4pj31jk0go0tb.jpg); width: 25%;" data-link="http://www.androidweekly.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="AndroidWeekly-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 开发技术周报</h1>
                     <p>汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。</p>
                     <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">去订阅</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNc79ly1fiu5wirrvsj31jk0gon4o.jpg); width: 25%;" data-link="https://developer.android.google.cn" data-tag="Android-8.0-li" data-event-type="click">
+            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNc79ly1fiu5wirrvsj31jk0gon4o.jpg); width: 25%;" data-link="https://developer.android.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-8.0-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 8.0 Oreo</h1>
                     <p>Android 奥利奥</p>
                     <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android-8.0', 'click');" title="Android 奥利奥">去尝尝</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu7q0q5h8j31jk0go770.jpg);" data-link="https://developer.android.google.cn/develop/index.html" data-tag="Android-Architecture-Components-li" data-event-type="click">
+            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu7q0q5h8j31jk0go770.jpg);" data-link="https://developer.android.google.cn/develop/index.html?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-Architecture-Components-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Architecture Components</h1>
                     <p>Android 架构组件</p>
                     <a class="btn" href='https://developer.android.google.cn/develop/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/develop/index.html', 'Android-Architecture-Components', 'click');" title="官方下载 Android Studio">去学习</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu5wi0cygj31jk0gon2g.jpg);" data-link="https://developer.android.google.cn/studio/index.html" data-tag="AndroidStudio-li" data-event-type="click">
+            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu5wi0cygj31jk0gon2g.jpg);" data-link="https://developer.android.google.cn/studio/index.html?utm_source=androiddevtools.cn&utm_medium=website" data-tag="AndroidStudio-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Studio</h1>
                     <p>官方下载 Android Studio</p>
                     <a class="btn" href='https://developer.android.google.cn/studio/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/studio/index.html', 'Android Studio', 'click');" title="官方下载 Android Studio">去下载</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tuy0n1fkj31jk0goq38.jpg); width: 25%;" data-link="http://www.materialdoc.cn" data-tag="Materialdoc-li" data-event-type="click">
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tuy0n1fkj31jk0goq38.jpg); width: 25%;" data-link="http://www.materialdoc.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Materialdoc-li" data-event-type="click">
                 <div class="inner">
                     <h1>Material Design</h1>
                     <p>开发者参考文档</p>
                     <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="开发者参考文档">去看看</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;" data-link="http://code-labs.cn" data-tag="CodeLabs-li" data-event-type="click">
+            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;" data-link="http://code-labs.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="CodeLabs-li" data-event-type="click">
                 <div class="inner">
                     <h1>Code Labs</h1>
                     <p>各种 Google 技术的 Code Labs</p>
                     <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="各种 Google 技术的 Code Labs">去试试</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;" data-link="https://developers.google.cn" data-tag="GoogleDevelopers-li" data-event-type="click">
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;" data-link="https://developers.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="GoogleDevelopers-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google Developers</h1>
                     <p>官方 Google 开发者网站</p>
                     <a class="btn" href='https://developers.google.cn' onclick="trackOutboundLink('https://developers.google.cn', 'Google Developers', 'click');" title="官方 Google 开发者网站">去瞅瞅</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;" data-link="http://www.studyjamscn.com/" data-tag="StudyJams-li" data-event-type="click">
+            <li style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;" data-link="http://www.studyjamscn.com/?utm_source=androiddevtools.cn&utm_medium=website" data-tag="StudyJams-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google StudyJams</h1>
                     <p style="color: darkgray">Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书。</p>
@@ -4946,8 +4946,17 @@
                     if (!$(this).attr('target')) {
                         $(this).attr('target', '_blank')
                     }
-                    if ($(this).attr('href').indexOf("androiddevtools.cn") != -1) {
+                    var url = $(this).attr('href');
+                    if (url.indexOf("androiddevtools.cn") != -1) {
                         $(this).attr('target', '_self')
+                    } else {
+                         if (url.indexOf("?") == -1 || url.indexOf("/?") == -1) {
+                                url += '?';
+                         } else {
+                                url += '&';
+                        }
+                        url += "utm_source=androiddevtools.cn&utm_medium=website";
+                        $(this).attr('href', url);
                     }
                 }
             );
