Add Android Studio beta4 link

--- a/index.html
+++ b/index.html
@@ -341,6 +341,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Beta4 -->
+                            <tr>
+                                <td rowspan="5">3.0 Beta4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.12/android-studio-ide-171.4304935-windows.zip">android-studio-ide-171.4304935-windows.zip</a>
+                                </td>
+                                <td>763141182 bytes</td>
+                                <td>ba05a01f28a0ddbd49de60b7c9368cec6937679a29fa0bc7b4a65e4c390220e3</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1fj5ahqs7slj31as0vy7a9.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.12/android-studio-ide-171.4304935-windows32.zip">android-studio-ide-171.4304935-windows32.zip</a>
+                                </td>
+                                <td>762611436 bytes</td>
+                                <td>5b752d559d9e6d3a97ca52557c74c5232ffaa395a2f50e1abaa274becce8ac93</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.12/android-studio-ide-171.4304935-mac.zip">android-studio-ide-171.4304935-mac.dmg</a>
+                                </td>
+                                <td>762430578 bytes</td>
+                                <td>43ceaab8498d775dfa166c2be07ea715509ccb2230ac0f621cc09932971b0216</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.12/android-studio-ide-171.4304935-linux.zip">android-studio-ide-171.4304935-linux.zip</a>
+                                </td>
+                                <td>761599096 bytes</td>
+                                <td>c5cec81cabb59873b44ac7794e3f59b8c0390eed1f0b5f247ded850a8ad0fe88</td>
+                            </tr>
                             <!-- 3.0 Beta2 -->
                             <tr>
                                 <td rowspan="5">3.0 Beta2</td>
