--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" type="image/x-icon" href="static/image/favicon.ico">
-    <title>AndroidDevTools Android SDK下载 Android Studio下载 Gradle下载 SDK Tools下载</title>
+    <title>AndroidDevTools - Android开发工具 Android SDK下载 Android Studio下载 Gradle下载 SDK Tools下载</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="翻墙 下载 最新版 Android开发工具 ADT Bundle Android Studio AndroidStudio 2.0 Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 sDK tools下载">
+    <meta name="description" content="AndroidDevTools 是一个收集整理 Android 开发所需的 Android SDK、开发中用到的工具、Android 开发教程、Android 设计规范，免费的设计素材等的网站。">
+    <meta name="keyword" content="Android开发工具 ADT Bundle Android Studio AndroidStudio Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 SDK Tools下载">
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <link href="static/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="static/css/app.css" rel="stylesheet">
