修改qiniu 广告 iamge

--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tKfTcly1fi5syvw31dj31jk0go48a.jpg); width: 25%;" data-link="http://t.cn/R9ics5h?utm_source=androiddevtools.cn&utm_medium=website" data-tag="QiNiu-PLSV-li" data-event-type="click">
+            <li style="background-image: url(https://ws1.sinaimg.cn/large/006tKfTcly1fjivdzq1g5j31jk0gogpz.jpg); width: 25%;" data-link="#" data-tag="QiNiu-JinHuaBa-li" data-event-type="click">
                 <div class="inner">
-                    <h1>七牛短视频 SDK 上线了</h1>
+                    <h1></h1>
                     <p style="color: darkgray"></p>
-                    <a class="btn" href="http://t.cn/R9ics5h" onclick="trackOutboundLink('http://t.cn/R9ics5h', 'QiNiu-PLSV', 'click');" title="">去用用</a>
+                    <!-- <a class="btn" href="" onclick="trackOutboundLink('http://t.cn/R9ics5h', 'QiNiu-JinHuaBa', 'click');" title="">去用用</a> -->
                 </div>
             </li>
             <li style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-Oreo-Weixin-li" data-event-type="click">
