--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(https://ws1.sinaimg.cn/large/006tKfTcly1fjivdzq1g5j31jk0gogpz.jpg); width: 25%;" data-link="#" data-tag="QiNiu-JinHuaBa-li" data-event-type="click">
+            <li style="background-image: url(https://ws4.sinaimg.cn/large/006tKfTcly1fjiwoe33l1j31jk0go78w.jpg); width: 25%;" data-link="https://0x7.me/HCsL" data-tag="QiNiu-JinHuaBa-li" data-event-type="click">
                 <div class="inner">
                     <h1></h1>
                     <p style="color: darkgray"></p>
