Add Android Studio beta5 link

--- a/index.html
+++ b/index.html
@@ -342,6 +342,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Beta5 -->
+                            <tr>
+                                <td rowspan="5">3.0 Beta5</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.13/android-studio-ide-171.4316950-windows.zip">android-studio-ide-171.4316950-windows.zip</a>
+                                </td>
+                                <td>763215410 bytes</td>
+                                <td>381dc9c6c224a04b70d54706f43d1b44a74d0cded02bec329027fb25f73de63d</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1fjj4qwbnkgj31kw0qv7b8.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.13/android-studio-ide-171.4316950-windows32.zip">android-studio-ide-171.4316950-windows32.zip</a>
+                                </td>
+                                <td>762685664 bytes</td>
+                                <td>93071d8591e9a368f30fd387d740e2bf2330f6366c38bf2fc43b0e7f8d7eec44</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.13/android-studio-ide-171.4316950-mac.zip">android-studio-ide-171.4316950-mac.dmg</a>
+                                </td>
+                                <td>762505290 bytes</td>
+                                <td>572dad9ff8285c2dff1d52445e1bb1797b12cf2e83eba55607fb007d29366b52</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.13/android-studio-ide-171.4316950-linux.zip">android-studio-ide-171.4316950-linux.zip</a>
+                                </td>
+                                <td>761673323 bytes</td>
+                                <td>accab8a8270bcc8c273ff980d26195dad3ea77839741e4dcd01cad5bd8ac462a</td>
+                            </tr>
                             <!-- 3.0 Beta4 -->
                             <tr>
                                 <td rowspan="5">3.0 Beta4</td>
