Add NDK beta1 link

--- a/index.html
+++ b/index.html
@@ -1766,6 +1766,42 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- NDK r16 beta1 -->
+                            <tr>
+                                <td rowspan="4">NDK r16-beta1</td>
+                                <td>Windows 32-bit</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r16-beta1-windows-x86.zip">android-ndk-r16-beta1-windows-x86.zip</a>
+                                </td>
+                                <td>658103256</td>
+                                <td>2aacf65266f22233038ac842bc716ca6b5eea4ea</td>
+                                <td rowspan="4"><a href="https://ws2.sinaimg.cn/large/006tNc79ly1fiujbk2g1uj31cr0epgos.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows 64-bit</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r16-beta1-windows-x86_64.zip">android-ndk-r16-beta1-windows-x86_64.zip</a>
+                                </td>
+                                <td>723055130</td>
+                                <td>e10991652b416f0e97881d68f1c62f81d853f916</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r16-beta1-darwin-x86_64.zip">android-ndk-r16-beta1-darwin-x86_64.zip</a>
+                                </td>
+                                <td>836940391</td>
+                                <td>5ff37ebf724bef40ff9e1fbdaab265e0b9754364</td>
+                            </tr>
+                            <tr>
+                                <td>Linux 64-bit (x86)</td>
+                                <td>
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r16-beta1-linux-x86_64.zip">android-ndk-r16-beta1-linux-x86_64.zip</a>
+                                </td>
+                                <td>851503303</td>
+                                <td>20affa8bb6c6ce6128894b0c0ceed370cea2e0c2</td>
+                            </tr>
+                            <!-- NDK r14b -->
                             <tr>
                                 <td rowspan="4">NDK r15c</td>
                                 <td>Windows 32-bit</td>
