Add Android Studio 3.0 Beta 6 link

--- a/index.html
+++ b/index.html
@@ -342,6 +342,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Beta6 -->
+                            <tr>
+                                <td rowspan="5">3.0 Beta6</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-windows.zip">android-studio-ide-171.4333198-windows.zip</a>
+                                </td>
+                                <td>763247713 bytes</td>
+                                <td>7d4e1e7d64df3eff70efd3d40f109b8c572a0af98030be94559f19f00dc466ab</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1fjj4qwbnkgj31kw0qv7b8.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-windows32.zip">android-studio-ide-171.4333198-windows32.zip</a>
+                                </td>
+                                <td>762717967 bytes</td>
+                                <td>de69cab769c168d37cedb3f1e47edfcbd04e69e847339a7002140e4f9aaba68c</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-mac.zip">android-studio-ide-171.4333198-mac.dmg</a>
+                                </td>
+                                <td>762717967 bytes</td>
+                                <td>386dafc2846542acbd8280ed89fe41434d2de5347d5ae41548e8d7c508e94e09</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-linux.zip">android-studio-ide-171.4333198-linux.zip</a>
+                                </td>
+                                <td>761705628 bytes</td>
+                                <td>f397b26d0b9de78de8433ec64c9f31710daf9e4f10040837dc576bbb801c2a1c</td>
+                            </tr>
                             <!-- 3.0 Beta5 -->
                             <tr>
                                 <td rowspan="5">3.0 Beta5</td>
