Add Android Studio 3.0 beta7 link

--- a/index.html
+++ b/index.html
@@ -342,6 +342,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Beta7 -->
+                            <tr>
+                                <td rowspan="5">3.0 Beta7</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-windows.zip">android-studio-ide-171.4365657-windows.zip</a>
+                                </td>
+                                <td>763685550 bytes</td>
+                                <td>fda68bbf4540f25cf8d1287e31200031baa7864e33c3396bcb4b33c05ae3bfd3</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fkd5lguz55j31kw0r3wm3.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-windows32.zip">android-studio-ide-171.4365657-windows32.zip</a>
+                                </td>
+                                <td>763155804 bytes</td>
+                                <td>a6a426321ffc976bee7771b31b3f213c2b353eeb6a5e92624661e8e169f81530</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-mac.zip">android-studio-ide-171.4365657-mac.dmg</a>
+                                </td>
+                                <td>762975386 bytes</td>
+                                <td>a1845cac07e4b53eff9c1dc51fc202bf3ee4dacc7aba2238280c2bdd784c0420</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-linux.zip">android-studio-ide-171.4365657-linux.zip</a>
+                                </td>
+                                <td>762143465 bytes</td>
+                                <td>663564903130e2a5694d621d720c25106cfa45df9ddd5ad28c02a5a700cea32a</td>
+                            </tr>
                             <!-- 3.0 Beta6 -->
                             <tr>
                                 <td rowspan="5">3.0 Beta6</td>
