Fix BWG link error

--- a/index.html
+++ b/index.html
@@ -4412,7 +4412,7 @@
                                 <a href="https://www.digitalocean.com/?refcode=ef15936ffa93" title="DigitalOcean注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.digitalocean.com/?refcode=ef15936ffa93', 'Host-digitalocean', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qnb5ij308g02s0t1.jpg"></a>
                             </li>
                             <li>
-                                <a href="https://bandwagonhost.com/aff.php?aff=133" title="BandwagonHost注册即送 10 刀, 节点多，最便宜 2.99 刀一个月" onclick="trackOutboundLink('https://bandwagonhost.com/aff.php?aff=133', 'Host-bandwagonhost', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qvivcj308g02st92.jpg"></a>
+                                <a href="https://bwh1.net/aff.php?aff=133&amp;pid=56" title="注册即送 10 刀，更有直连中国的线路仅需 3.99 刀一个月，年付只需 29 刀，使用优惠码 BWH1ZBPVK 再节省 6%" onclick="trackOutboundLink('https://bwh1.net/aff.php?aff=133&amp;pid=56', 'Host-bandwagonhost', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qvivcj308g02st92.jpg"></a>
                             </li>
                         </ul>
                     </div>
