Added Android Studio 3.0 RC2 link

--- a/index.html
+++ b/index.html
@@ -324,6 +324,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 RC2 -->
+                            <tr>
+                                <td rowspan="5">3.0 RC2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-windows.zip">android-studio-ide-171.4402976-windows.zip</a>
+                                </td>
+                                <td>772876431 bytes</td>
+                                <td>9728ce4f45c767d0f1ce39dcd5889b17decf8ffe60521b54f1b9737c510ee87e</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fkpo0w7hqmj31kw0jbjyl.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-windows32.zip">android-studio-ide-171.4402976-windows32.zip</a>
+                                </td>
+                                <td>772346685 bytes</td>
+                                <td>de5799dd0b75a85c8aa344d9e5f073e9879ba9eb71749806050166b78fab6d78</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-mac.zip">android-studio-ide-171.4402976-mac.dmg</a>
+                                </td>
+                                <td>771858992 bytes</td>
+                                <td>b96a13a25562c44a3b213c25afa0c64eab888e653f71b16b1edf940efecabfdf</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-linux.zip">android-studio-ide-171.4402976-linux.zip</a>
+                                </td>
+                                <td>771334362 bytes</td>
+                                <td>6eef456231f73f03e9f502e878cbb87789319892780251b0ead257d60266c5a1</td>
+                            </tr>
                             <!-- 3.0 RC1 -->
                             <tr>
                                 <td rowspan="5">3.0 RC1</td>
